[tool.poetry]
name = "ycrowler"
version = "0.1.0"
description = ""
authors = ["Зимин Николай <Nikola.Zimin@x5.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
aiohttp = "^3.8.3"
aiofiles = "^22.1.0"
lxml = "^4.9.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.11.1"
flake8-isort = "^5.0.3"
flake8-commas = "^2.1.0"
mypy = "^0.991"
types-aiofiles = "^22.1.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
